--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^1.6.7",
     "buffer": "^6.0.3",
     "chart.js": "^4.4.2",
+    "draft-js": "^0.11.7",
     "faker": "^6.6.6",
     "formik": "^2.4.5",
     "framer-motion": "^10.18.0",
@@ -34,6 +35,8 @@
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-modal": "^3.16.1",
     "react-redux": "^9.1.0",
@@ -41,6 +44,7 @@
     "react-s3": "^1.3.1",
     "react-scripts": "5.0.1",
     "react-spring": "^9.7.3",
+    "react-switch": "^7.0.0",
     "react-tooltip": "^5.26.3",
     "redux": "^5.0.1",
     "styled-components": "^6.1.8",
